<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<!--    tools:showIn="navigation_view">-->

<!--    <group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/search" />
        <item
            android:id="@+id/MyCars"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/MyCars" />
        <item
            android:id="@+id/subscription"
            android:icon="@drawable/ic_baseline_subscriptions_24"
            android:title="@string/subscription" />
        <item
            android:id="@+id/payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/payment" />
<!--    </group>-->
</menu>