<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:padding="20dp"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/textStreetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:padding="1dp"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textNumberOfSpots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/number_of_spots"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/textPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="1dp"
            android:text="@string/paid_not_paid"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="1dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/saveAsFavorite"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:padding="1dp"
            android:src="@drawable/ic_heart"
            android:text="@string/favorite"
            android:tooltipText="Save as favorite" />

    </LinearLayout>
</androidx.cardview.widget.CardView>