<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.parkme.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.parkme.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_myCars"
        android:name="com.example.parkme.ui.cars.MyCarsFragment"
        android:label="@string/title_MyCars"
        tools:layout="@layout/activity_mycars">
        <action
            android:id="@+id/navigateToCarsFragment"
            app:destination="@id/fragmentAddMyCars"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/fragmentAddMyCars"
        android:name="com.example.parkme.AddingNewCarFragment"
        android:label="Add a car"
        tools:layout="@layout/fragment_adding_new_car" >
        <action
            android:id="@+id/action_addCarFragment_to_navigation_car"
            app:destination="@id/navigation_myCars"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>



</navigation>