<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/relLayHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:padding="10dp"
            android:src="@drawable/carpicture" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="430dp"
        android:background="@drawable/shape_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relLayHeader" />

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="326dp"
        android:layout_height="289dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_login"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relLayHeader">

        <EditText
            android:id="@+id/loginEmail"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:autofillHints="email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
            android:inputType="textPassword"
            android:autofillHints="password" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginPanel"/>

    <LinearLayout
        android:id="@+id/bottomText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPanel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/clickOnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>