<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textCarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:padding="1dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textCarType"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/type"
            android:textStyle="italic"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="133dp"
        android:layout_height="68dp"
        android:layout_gravity="end"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/remove"
            />
       </LinearLayout>
</androidx.cardview.widget.CardView>
