<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    android:weightSum="10"
    android:id="@+id/parkingSpotsActivity"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.parkingspot.ParkingSpotActivity">


    <TextView
        android:id="@+id/textParkingSpots"
        android:layout_width="292dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="59.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="59.5dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/ParkingSpots"
        android:textColor="@color/white"
        android:textSize="28sp" />


    <CheckBox
        android:id="@+id/checkboxFree"
        android:layout_width="124dp"
        android:layout_height="31dp"
        android:layout_below="@+id/textParkingSpots"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="261dp"
        android:checked="true"
        android:text="@string/free"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/checkboxPaid"
        android:layout_width="126dp"
        android:layout_height="31dp"
        android:layout_below="@+id/textParkingSpots"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="140dp"
        android:checked="true"
        android:text="@string/paid"
        android:textColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parkingSpotsRecycleView"
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_below="@+id/textParkingSpots"
        android:layout_marginTop="23dp"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textParkingSpots" />

</RelativeLayout>