<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="341dp"
        android:layout_height="352dp"
        android:layout_marginTop="228dp"
        android:src="@drawable/bluecar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/park_me"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/carImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/quicksand_medium"
        android:shadowColor="#FFFFFF"
        android:text="@string/quick_and_fast_parking_nearby_your_location"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#80D8FF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="344dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/explore_available_parking_spots_in_horsens"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/carImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>